# AndroidUSBCamera

./: .gitignore  build-aar.sh  build.gradle  gradle.properties  settings.gradle  有效修改.md
app/: build.gradle
libausbc/src/main/java/com/jiangdg/ausbc/: MultiCameraClient.kt
libausbc/src/main/java/com/jiangdg/ausbc/base/: CameraActivity.kt  CameraFragment.kt
libausbc/src/main/java/com/jiangdg/ausbc/camera/: CameraUVC.kt  CameraUvcStrategy.kt
libausbc/src/main/java/com/jiangdg/ausbc/render/: RenderManager.kt
libnative/: build.gradle
libnative/src/main/cpp/: CMakeLists.txt
libnative/src/main/cpp/module/mp3/lame/: machine.h
libutils/: build.gradle
libuvc/: build.gradle
libuvc/src/main/jni/: Application.mk
libuvc/src/main/jni/libuvc/include/libuvc/: libuvc_internal.h
libuvccommon/: build.gradle
libuvccommon/src/main/java/com/jiangdg/media/: MediaDecoder.java  MediaMoviePlayer.java
